Fixed the overflowing issue with the Personal Best records.

--- a/workout-app/src/App.css
+++ b/workout-app/src/App.css
@@ -16,4 +16,5 @@
 
 .personalBestSection{
   margin-top: 1rem;
+  margin-bottom: 5rem;
 }
